--- a/_config.yml
+++ b/_config.yml
@@ -21,18 +21,18 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy                          # the main title
+title: Audsona                          # the main title
 
-tagline: A text-focused Jekyll theme   # it will display as the sub-title
+tagline: A step into the seemingly bottomless chasm...   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
+  One more day closer to our graves...
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ''
+url: 'https://nmichael314.github.io'
 
 github:
-  username: github_username             # change to your github username
+  username: nmichael314            # change to your github username
 
 twitter:
   username: twitter_username            # change to your twitter username
@@ -40,7 +40,7 @@ twitter:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
+  name: Nick Michael
   email: example@doamin.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
