--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Audsona                          # the main title
+title: BatAndCat Support                          # the main title
 
 tagline: A step into the seemingly bottomless chasm...   # it will display as the sub-title
 
