--- a/_config.yml
+++ b/_config.yml
@@ -23,10 +23,10 @@ timezone:
 
 title: BatAndCat Support                          # the main title
 
-tagline: A step into the seemingly bottomless chasm...   # it will display as the sub-title
+tagline: Support for using the Portable Hearing Laboratory (PHL)   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  One more day closer to our graves...
+ PHL Portable Hearing Laboratory running openMHA
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: 'https://nmichael314.github.io'
