--- a/_config.yml
+++ b/_config.yml
@@ -21,13 +21,12 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: BatAndCat Support                          # the main title
+title: Blog # the main title
 
-tagline: Support for using the Portable Hearing Laboratory (PHL)   # it will display as the sub-title
+tagline: Personal Blog   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
- PHL Portable Hearing Laboratory running openMHA
-
+        Pesonal blog
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: 'https://nmichael314.github.io'
 
